CHAIN-67: Stand up sequencer infrastructure (#61)